Database modifications, for Spring Data (I300).